sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:5: error: not found: value deb
  deb=0
  ^AlgCocktailSort1:7: error: not found: value deb
             for(x<-deb to N){if(plusPetit(x+1,x)){echange(x,x+1);mouv=true}}
                    ^AlgCocktailSort1:8: error: not found: value deb
             for(x<-deb to N){
                    ^